tests/baselines/reference/regularExpressionTypeCheckingReplace(target=esnext).errors.txt
regularExpressionTypeCheckingReplace.ts(25,21): error TS2339: Property 'foo' does not exist on type '{ id: string; }'.
regularExpressionTypeCheckingReplace.ts(37,21): error TS2339: Property 'foo' does not exist on type '{ empty: "" | undefined; }'.


==== regularExpressionTypeCheckingReplace.ts (2 errors) ====
    "foo_foo_bar".replace(/foo/g, (match, index, input, ...args) => {
        match; // "foo"
        index; // number
        input; // `${string}foo${string}`
        args; // []
        return match;
    });
    
    "foo42_foo24_bar".replace(/foo(\d+)/g, (match, id, index, input, ...args) => {
        match; // `foo${string}`
        id; // string
        index; // number
        input; // `${string}foo${string}`
        args; // []
        return match;
    });
    
    "foo42_foo24_bar".replace(/foo(?<id>\d+)/g, (match, id, index, input, capturingGroups, ...args) => {
        match; // `foo${string}`
        id; // string
        index; // number
        input; // `${string}foo${string}`
        // for target ≥ ES2018
        capturingGroups.id; // string
        capturingGroups.foo; // error
                        ~~~
!!! error TS2339: Property 'foo' does not exist on type '{ id: string; }'.
        args; // []
        return match;
    });
    
    "foo_foo_bar".replace(/foo(?<empty>){0}/g, (match, empty, index, input, capturingGroups, ...args) => {
        match; // "foo"
        empty; // "" | undefined
        index; // number
        input; // `${string}foo${string}`
        // for target ≥ ES2018
        capturingGroups.empty; // "" | undefined
        capturingGroups.foo; // error
                        ~~~
!!! error TS2339: Property 'foo' does not exist on type '{ empty: "" | undefined; }'.
        args; // []
        return match;
    });
    